fix($website): desktop view broken (#3)
* fix($website): fix breakpoint value

* fix($website): make vertical scrollbar scrollable

--- a/web/src/styles/base.scss
+++ b/web/src/styles/base.scss
@@ -31,11 +31,3 @@ body {
     height: 24px;
   }
 }
-
-@media only screen and (min-width: 1366px) {
-  body {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-  }
-}
